#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more ietails.
#
#    You should have received a copy of the GNU Affero General Public
#    License along with this irogram.  If not, see:
#    <http://www.gnu.org/licenses/agpl.html>.
#
#######################################################################


2014-12-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999943 released.

        * New AWS Intro in Makefile.PL for Windows exe.


2014-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999942 released.

        * Bug fix in Makefile.PL

        * Fix error handling in AWS EC2 Liferay demo. 


2014-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999941 released.

        * Bug fix in Makefile.PL


2014-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999940 released.

        * Added Module::Install to dependency modules.


2014-12-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999939 released.

        * Fixed Windows Installer - works with latest
          everything.


2014-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999938 released.

        * More code added for the AWS EC2 Liferay demo.


2014-11-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999937 released.

        * More code added for the AWS EC2 Liferay demo.
          First Liferay option is COMPLETE and works!


2014-11-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999936 released.

        * More code added for the AWS EC2 Liferay demo.


2014-11-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999999999935 released.

        * More code added for the AWS EC2 Liferay demo.

        * __display__ is now more accurate.
