@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d00f4d854bd939b22662ac90461ea2dd215999ac ChangeLog
+SHA1 f253c7674a836b49d56ef13832e4da2006ff4483 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 ba77bf98e2a78920fa7b8c192740a8b00c8df641 META.yml
-SHA1 1b203684ff0a2d183ef2e79744b32053baf7411e Makefile.PL
+SHA1 92b9d34fd80d88ddd5e34a1c2786ae8cc0ea0fb0 META.yml
+SHA1 3d437618034785fd3846661af1da02c0459e4c39 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -133,17 +133,17 @@ SHA1 fe312c3ed58aac44bd3bebb39bef97df2c70ecad lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 bde47d7e159545b9a32c518527e122b5c5231901 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 15b442ad7e268218b9156d48bba27c6d84ebcb57 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 6f84d74020ee884ca2b4089738b39baa48366a09 lib/Net/FullAuto/FA_Core.pm
+SHA1 f63c2afc182ed96037ca57b02afce8dad99e975d lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUgONJAAoJEBa/9Pad787EXyQIAJRn4OwTjU4eH86Wual/fY1s
-375ccOa7YYYThsbR2Oji6ZrGHM9IvEyfbMdejmbJyDN0Lf1JFqgnfphghxDSDfNH
-TNFBJzc+VAwtrcJURaJn/f4q9XjjnlvefrFZx2gDFhk15W9dS3aTvEUTLBSxS0D4
-0/qnP/JHSG/pOC3qJ3D96VES9SsfdHuX00ld4J/yf5nntz+9R9ICa928Ll+xdRxW
-EWxRXTwkYzXhsLRn8QmGF4E45DnyqwRCqEjiI2Az41ZJkM8dchNMC9t9oP7HDUVb
-dnwhbrVKHDSEgaswxCjdStmJM9DY+FW4lT0rYmfnEFK2PE/69bkRjhY+5mNEx4E=
-=m+Ir
+iQEcBAEBAgAGBQJUg4JgAAoJEBa/9Pad787Ej4AH/3vTH5XNXn8FPfZ7AulxgYU1
+aLaYyNos4f2R5UDprkVhIKgNzOnphiKTDWyMa00IiXrUxOcUypdhjcmQRrmpvdW6
+rHTgTqB7+Hx3UxkjiggWAEkQahUKLlupzokIABhOR/NswWfXI2N1B5/QdU94VUmf
+0PvzJ4mmOkwQLL/sXAdes9eMURxFhLWXtUoSQu4rDzT9ciWDtRGKHKJiAO+FeHoq
+bVvaA9sLbEbhQ6MRGUlmpS3Xk27P6spf9wAumXwTbuPN3zl6RckVZjC5gppO3uVI
+bpMz7zdbTK34Y6aJxFVs1sKRPOUcrrPTRV6A3Y7HDVX1v8zWtLrofykQj2w4vrw=
+=eo6d
 -----END PGP SIGNATURE-----
