@@ -20,6 +20,13 @@
 #######################################################################
 
 
+2014-12-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999999999944 released.
+
+        * Added wxPerl to demo list.
+
+
 2014-12-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999999999943 released.
